Awesome portfolio completed

--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="portfolio">
+                <div class="portfolio-text">
+                    <h6 >THE BEST GIFTS</h6>
+                    <h2>Our Awesome Portfolio</h2>
+                    <p class="portfolio-desc">"Discover exquisite quality in every Persel bag, sunglasses, shoes, and ornament — each item crafted with precision and style to elevate your fashion statement effortlessly."</p>
+                </div>
+                <div class="portfolio-image">
+                    <table>
+                        <tr>
+                            <td><img  class="portfolio_img"   src="resources/Rectangle 3.png" alt=""></td>
+                            <td><img class="portfolio_img" src="resources/Rectangle 4.png" alt=""></td>
+                            <td><img class="portfolio_img" src="resources/Rectangle 5.png" alt=""></td>
+                        </tr>
+                        <tr>
+                            <td><img class="portfolio_img"     src="resources/Rectangle 6.png" alt=""></td>
+                            <td><img  class="portfolio_img"        src="resources/Rectangle 7.png" alt=""></td>
+                            <td><img    class="portfolio_img"  src="resources/Rectangle 8.png" alt=""></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
