--- a/index.html
+++ b/index.html
@@ -70,7 +70,40 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="subscribe">
+                <div class="mail-img"> <img src="resources/Group 61.png" alt=""></div>
+                <div class="subscribe-text">
+                  <h2 class="subscribe-heading">Subscribe Newsletter</h2>
+                  <p class="subscribe-desc">It's all about teaching web development skills and techniques in an efficient and practical manner. If you are just getting started in web development then subscribe my channel.</p>
+                </div>
+                <div class="input-container">
+                <input type="email" name="" class="input-field" id="" placeholder="user@gmail.com">
+                <button type="submit" class="subscribe-button">Subscribe</button>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+         <div class="footer-style">
+           <div class="first-row">
+            <div class="first-row-item">
+                <p>44, Big Building Roosevelt Street
+                </p>
+            </div>
+             <div class="first-row-second-item">
+                <p> Beach Gardens Florida 33410</p>
+             </div>
+            </div>
+          
+           </div>
+           <div class="second-row">
+
+           </div>
+
+
+         </div>
+
+    </footer>
 </body>
 </html>
