--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
                 </div>
             </div>
         </section>
+       <section>
+          <div class="party-time">
+            <div class="party-schedule">
+                <h3>Place: <span>New Park Hotel</span><br>
+                    Date: <span>31 December Night 2023</span><br>
+                    Time: <span>Evening 7.30 pm to 12.30 am</span></h3>
+            </div>
+            <div class="party-btn">
+                <button id="join_btn">JOIN NOW</button>
+            </div>
+          </div>
+       </section>
+
         <section>
             <div class="portfolio">
                 <div class="portfolio-text">
