--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             </div>
           </div>
        </section>
+       <section>
+        
+       </section>
 
         <section>
             <div class="portfolio">
