--- a/index.html
+++ b/index.html
@@ -64,7 +64,25 @@
           </div>
        </section>
        <section>
-        
+         <div class="comming-offer">
+            <div class="first-offer">
+                <h4>NEW BEST OFFER</h4>
+               <h2>Coming Soon</h2>
+               <p>
+
+                "Stay tuned for our exciting upcoming offer, set to launch soon and bring you exclusive deals you won't want to miss!"</p>
+            </div>
+            <div class="second-offer-image">
+                <img src="resources/Ellipse 1.png" alt="">
+            </div>
+            <div class="third-offer">
+                <h2>2024</h2>
+                <p>Happy New Year! I hope all your dreams come true <br> in 2024.
+                     Onwards and upwards! </p>
+                <img src="resources/Group 96.png" alt="">
+            </div>
+         </div>
+         
        </section>
 
         <section>
