awesome website addeded

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
          </div>
          
        </section>
-
+        <section class="last-section" >
+            <div class="holidays-sale">
+                <h5 id="function">WHAT IS FUNCTIONAL</h5>
+                <h3 class="holiday2">Holidays <span>Sale 50%</span></h3>
+                <p>"Get ready to unwrap your perfect holiday with our exclusive 50% off sale! Embrace the spirit of the season and treat<br> yourself to incredible deals that will make your celebrations even merrier."</p>
+            </div>
+        </section>
         <section>
             <div class="portfolio">
                 <div class="portfolio-text">
