--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
                 <h3 class="holiday2">Holidays <span>Sale 50%</span></h3>
                 <p>"Get ready to unwrap your perfect holiday with our exclusive 50% off sale! Embrace the spirit of the season and treat<br> yourself to incredible deals that will make your celebrations even merrier."</p>
             </div>
+            <div class="amazing-container">
+                <div class="gift-box">
+                    <img src="resources/Group 75.png" alt="">
+                </div>
+                <div class="discount-img">
+                    <img src="resources/Group 44.png" alt="">
+                </div>
+                <div class="wow-img">
+                    <img src="resources/Rectangle 1.png" alt="">
+                </div>
+            </div>
+            <div class="red-border">
+                <img src="resources/Rectangle 2.png" alt="">
+            </div>
         </section>
         <section>
             <div class="portfolio">
